--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+	<script src="main.js"></script>
 
 </head>
 
